--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,9 @@
   --bg-page-colour: #ffffff;
   --bg-button-hover: #188ce8;
   --bg-button-portfolio: #f5f4fa;
-  --futer-mail-tel: rgba(255, 255, 255, 0.6)
+  --futer-mail-tel: rgba(255, 255, 255, 0.6);
+  --border-bottom: #ECECEC;
+  --border-portfolio: #EEEEEE
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -18,7 +20,7 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   /* outline: 2px solid green; */
@@ -36,6 +38,9 @@ body {
 
 
 /* хэдер */
+.page-header {
+  border-bottom: 1px solid var(--border-bottom);
+}
 .main-nav {
   display: flex;
   align-items: center;
@@ -382,10 +387,14 @@ a {
 }
 
 .main-list-projects-items {
-  width: calc((100%-60px) / 3);
+  width: 370px;
+  margin-right: 30px;
   margin-bottom: 30px;
 
   background-color: var(--white-text-colour);
+  border-bottom: 1px solid var(--border-portfolio);
+  border-left: 1px solid var(--border-portfolio);
+  border-right: 1px solid var(--border-portfolio);
 }
 
 .main-list-projects-items:nth-child(3n) {
