--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,7 @@ body {
  h3,
  p,
  ul {
-   margin-top: 0;
-   margin-bottom: 0;
+   margin:0;
    padding: 0;
  }
 
@@ -129,14 +128,18 @@ padding-left: 50px;
 
 
 /* страница герой */
+.section{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .hero-page {
   background-color: #2f303a;
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
-  padding-top: 200px;
-  margin-bottom: 30px;
   color: var(--white-text-colour);
   font-weight: 900;
   font-size: 44px;
@@ -148,6 +151,12 @@ padding-left: 50px;
 
 /* кнопка */
 .hero-button {
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -171,8 +180,6 @@ padding-left: 50px;
 /* ключевые компетенции */
 .prefences-list {
   display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .prefences-item {
@@ -185,7 +192,7 @@ margin-right: 30px;
 }
 
 .prefences-title {
-  margin-bottom: 10px;
+  margin: 0;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -195,11 +202,15 @@ margin-right: 30px;
   text-transform: uppercase;
 }
 .prefences p {
+  margin-top: 10px;
   line-height: 1.71;
 }
 
 
 /* чем мы занимаемся*/
+.about{
+  padding-top: 0;
+}
 .about-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -210,7 +221,6 @@ margin-right: 30px;
 }
 
 .our-team-title {
-  padding-top: 94px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -222,7 +232,6 @@ margin-right: 30px;
 .about-list {
   display: flex;
   margin-top: 50px;
-  padding-bottom: 94px;
 }
 
 .about-list-item {
@@ -233,6 +242,12 @@ margin-right: 30px;
   margin-right: 0;
 }
 
+.about-list-item img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+
+}
 
 /* наша команда */
 .our-team {
@@ -243,7 +258,6 @@ margin-right: 30px;
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
-  padding-bottom: 94px;
 }
 
 .our-team-item {
@@ -267,7 +281,7 @@ margin-right: 30px;
 
 .our-team p {
   margin-top: 10px;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
@@ -341,11 +355,10 @@ margin-right: 30px;
 .main-list {
   display: flex;
   justify-content: center;
-  padding-top: 94px;
 }
 
 .main-list-projects {
-  padding-top: 34px;
+  margin-top: 50px;
 }
 
 .main-list-item {
@@ -354,10 +367,6 @@ margin-right: 30px;
 
 .main-list-item:last-child {
   margin-right: 0;
-}
-
-.container.portfolio {
-  margin-bottom: 94px;
 }
 
 .main-list button {
@@ -369,6 +378,7 @@ margin-right: 30px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+border-radius: 4px;
 }
 
 .main-list button:hover,
@@ -390,11 +400,6 @@ a {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-
-  background-color: var(--white-text-colour);
-  border-bottom: 1px solid var(--border-portfolio);
-  border-left: 1px solid var(--border-portfolio);
-  border-right: 1px solid var(--border-portfolio);
 }
 
 .main-list-projects-items:nth-child(3n) {
@@ -404,10 +409,14 @@ margin-right: 0;
 .main-list-projects-items:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+.main-project-naming {
+  padding: 20px 24px;
+  border-bottom: 1px solid var(--border-portfolio);
+  border-left: 1px solid var(--border-portfolio);
+  border-right: 1px solid var(--border-portfolio);
 
+}
 .main-project-name {
-  margin-left: 24px;
-  margin-right: 24px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -416,8 +425,7 @@ margin-right: 0;
 }
 
 .main-project-group {
-  margin-left: 24px;
-  margin-right: 24px;
+  margin-top: 4px;
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.88;
