--- a/css/styles.css
+++ b/css/styles.css
@@ -242,11 +242,10 @@ margin-right: 30px;
   margin-right: 0;
 }
 
-.about-list-item img{
+img {
   display: block;
   max-width: 100%;
   height: auto;
-
 }
 
 /* наша команда */
@@ -264,6 +263,8 @@ margin-right: 30px;
   width: 270px;
   margin-right: 30px;
   background-color: var(--white-text-colour);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-item:last-child {
@@ -370,6 +371,7 @@ margin-right: 30px;
 }
 
 .main-list button {
+  padding: 6px 22px;
   color: var(--title-text-color);
   background-color: var(--bg-button-portfolio);
   font-family: "Roboto";
@@ -378,7 +380,8 @@ margin-right: 30px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-border-radius: 4px;
+  border-radius: 4px;
+  border: none;
 }
 
 .main-list button:hover,
