--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ padding-left: 50px;
   width: 200px;
   height: 50px;
   border-radius: 4px;
+  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   font-weight: 700;
